--- a/src/Components/Chat/Messages/Body/Messages-body.css
+++ b/src/Components/Chat/Messages/Body/Messages-body.css
@@ -1,13 +1,14 @@
-.message-body-container{
+.message-body-container {
     background-image: url('../../../../data/whatsapp-chat-background.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
     padding: 30px;
+    padding-bottom: 100px;
 }
 
-.message-item{
+.message-item {
     background: #ffffff;
     width: fit-content;
     padding: 10px;
@@ -15,12 +16,12 @@
     margin-bottom: 10px;
 }
 
-.message-item span{
+.message-item span {
     font-size: 10px;
     padding-left: 5px;
 }
 
-.message-item-user{
+.message-item-user {
     text-align: right;
     background: #DCF8C6;
     width: 100%;
