--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,4 +1,4 @@
-.login-container{
+.login-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -8,31 +8,31 @@
     height: 100vh;
 }
 
-.main-login-container{
+.main-login-container {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     background-color: #fff;
-    padding: 40px 20px;
+    padding: 60px 30px;
     border-radius: 10px;
     box-shadow: 0px 0px 50px 1px rgba(0, 0, 0, 0.04);
 }
 
-.main-login-container img{
+.main-login-container img {
     width: 80px;
     border-radius: 10px;
 }
 
-.main-login-container h2{
+.main-login-container h2 {
     padding: 20px 0;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 24px;
 }
 
-.main-login-container .login-btn{
+.main-login-container .login-btn {
     border: 0;
-    background-color: rgb(0,230,118);
+    background-color: rgb(0, 230, 118);
     color: #fff;
     padding: 10px 20px;
     border-radius: 10px;
