--- a/src/Components/loader/loader.css
+++ b/src/Components/loader/loader.css
@@ -15,7 +15,7 @@
     border: 8px solid rgb(80, 235, 163);
     border-radius: 50%;
     animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    border-color: #fff transparent transparent transparent;
+    border-color: rgb(80, 235, 163) transparent transparent transparent;
 }
 
 .lds-ring div:nth-child(1) {
